src/components/modal/v2/styles/components/_content-wrapper.scss
.content__wrapper {
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    margin: auto;
    height: 100%;
    max-height: 100vh;
    // Important: This forces the wrapper to be the entire width of the screen
    // which is needed in Windows due to the scroll bar offset hack used
    // on the topmost parent container
    width: 100vw;

    @include desktop {
        display: flex;
        justify-content: center;
        height: auto;
    }

    @include tablet {
        height: auto;
    }
}

.content__background {
    min-height: 100%;
    height: 100%;
    position: relative;
    width: 100%;
    margin: auto;
    max-width: 840px;
    display: flex;
    flex-direction: column;

    @include desktop {
        margin-top: 50px;
        margin-bottom: 50px;
        width: 100%;
        display: flex;
        flex-direction: column;
        border-radius: 10px;
        flex: 1 1 100%;

        .modal-wrapper:not(.lander) & {
            margin-top: auto;
            margin-bottom: auto;
            max-height: 90vh;
            overflow-y: auto;
        }
    }

    @include tablet {
        margin-top: 50px;
        margin-bottom: 50px;
        max-width: 640px;
    }

    @include mobile {
        display: flex;
        flex-direction: column;
    }
}

.content-column {
    text-align: left;
}

